--- a/meson.build
+++ b/meson.build
@@ -598,7 +598,10 @@ if not get_option('tools').disabled()
 endif
 subdir('tests')
 subdir('data')
-subdir('docs')
+
+if not get_option('doc').disabled()
+  subdir('docs')
+endif
 
 # xgettext is optional (on Windows for instance)
 if find_program('xgettext', required : get_option('nls')).found()
